# AndPlayer

./: README.md  build.gradle  gradlew.bat  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/andplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndAudio.cpp  AndAudio.h  AndCallJava.cpp  AndCallJava.h  AndFFmpeg.cpp  AndFFmpeg.h  AndPlayStatus.cpp  AndPlayStatus.h  AndQueue.cpp  AndQueue.h  AndVideo.cpp  AndVideo.h  AndroidLog.h  CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/libavcodec/: avcodec.h  xvmc.h
app/src/main/cpp/include/libavformat/: avformat.h  avio.h
app/src/main/cpp/include/libavutil/: common.h  error.h  hwcontext_d3d11va.h
app/src/main/cpp/soundtouch/SoundTouch/: PeakFinder.cpp  SoundTouch.cpp  TDStretch.cpp  TDStretch.h  sse_optimized.cpp
app/src/main/java/com/example/andplayer/: MainActivity.java
app/src/main/java/com/example/andplayer/lisnter/: IOnPreparedListener.java  IPlayerListener.java
app/src/main/java/com/example/andplayer/opengl/: AndGLSurfaceView.java  AndRender.java  AndShaderUtil.java
app/src/main/java/com/example/andplayer/service/: AndPlayer.java
app/src/main/java/com/example/andplayer/ui/utils/: DisplayUtil.java
app/src/main/java/com/example/andplayer/utils/: DisplayUtil.java  FileUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/andplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
